[package]
name = "rendy-pbr"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"

[features]
default = ["rendy"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[dependencies]
genmesh = "0.6"
nalgebra = "0.16"
env_logger = "0.5"
failure = "0.1"
lazy_static = "1.0"
image = "0.20.1"
log = "0.4"
winit = "0.18"
palette = "0.4"
rand = "0.6"
gfx-hal = "0.1"
derivative = "1.0"
gltf = "0.11"
specs = "0.14"
hibitset = "0.5"

[dependencies.rendy]
optional = true
path = "../rendy/rendy"
features = ["texture-image"]
# git = "https://github.com/termhn/rendy"
# rev = "595d748c934f24be3ccbcd49343a8ea2d19257a9"