[package]
name = "rendy-pbr"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"

[profile.release]
debug = true

[features]
default = ["rendy"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[dependencies]
genmesh = "0.6"
nalgebra = { version = "0.17" }
env_logger = "0.5"
failure = "0.1"
lazy_static = "1.0"
image = "0.20.1"
log = "0.4"
winit = "0.18"
palette = "0.4"
rand = "0.6"
derivative = "1.0"
specs = "0.14"
specs-hierarchy = "0.3"
hibitset = "0.5"
ron = "0.5"
serde = "1.0"

[dependencies.gltf]
git = "https://github.com/gltf-rs/gltf"
rev = "acf33a93e82aea16fd36e81f9a667d5b2ab064a1"
# path = "../gltf"

[dependencies.rendy]
optional = true
path = "../rendy/rendy"
features = ["texture-image"]
# git = "https://github.com/termhn/rendy"
# rev = "f84ac11f7bbc632557254b657c7249edb4fe98e2"